--- a/frontend/src/app/components/modal/login/login.component.html
+++ b/frontend/src/app/components/modal/login/login.component.html
@@ -48,7 +48,7 @@
             <p>&nbsp;</p>
 
             <div class="text-center">
-              <a class="btn btn-primary btn-round btn-lg btn-block" data-dismiss="modal" (click)="login()">LogIn</a>
+              <a class="btn btn-primary btn-lg btn-block" data-dismiss="modal" (click)="login()">LogIn</a>
             </div>
           </div>
           <div class="justify-content-center">
