--- a/frontend/src/app/components/modal/modal.component.html
+++ b/frontend/src/app/components/modal/modal.component.html
@@ -1,5 +1,5 @@
 <!--Login-->
-<button class="btn btn-primary btn-lg btn-round" (click)="[open(loginpop,'' , '')]">LogIn</button>
+<button class="btn btn-primary btn-lg" (click)="[open(loginpop,'' , '')]">LogIn</button>
 <ng-template #loginpop let-c="close" let-d="dismiss">
 
     <!-- Head -->
@@ -14,14 +14,13 @@
 
     <app-login></app-login>
 
-
 </ng-template>
 <!--/Login-->
 
 
 <!--SignUp-->
 &nbsp;
-<button class="btn btn-primary btn-lg btn-simple btn-round" (click)="[open(signuppop,'' , '')]">SignUp</button>
+<button class="btn btn-primary btn-lg btn-simple" (click)="[open(signuppop,'' , '')]">SignUp</button>
 <ng-template #signuppop let-c="close" let-d="dismiss">
 
     <!-- Head -->
