--- a/frontend/src/app/components/modal/signup/signup.component.html
+++ b/frontend/src/app/components/modal/signup/signup.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="col-md-12">
-    <div class="card card-signup card-plain">
+    <div class="card card-login card-plain">
       <form class="form" method="" action="" [formGroup]="signupForm">
         <div class="content">
 
@@ -92,12 +92,13 @@
           <div class="mt-5">
             <!-- Buttons -->
             <div class="text-center">
-              <a class="btn btn-primary btn-round btn-lg btn-block" data-dismiss="modal" (click)="signup()">Signup</a>
+              <a class="btn btn-primary btn-lg btn-block" data-dismiss="modal" (click)="signup()">Signup</a>
             </div>
           </div>
         </div>
 
       </form>
+      <div class="mt-5"></div>
     </div>
   </div>
 </div>
