--- a/frontend/src/app/components/non-registered/non-registered.component.html
+++ b/frontend/src/app/components/non-registered/non-registered.component.html
@@ -5,7 +5,7 @@
         <div class="mt-5">
           <div class="findSellers">
             <h5>Find Sellers</h5>
-            <button class="btn btn-primary btn-lg btn-round">Find</button>
+            <button class="btn btn-primary btn-lg">Find</button>
             <div class="mt-5"></div>
           </div>
         </div>
