--- a/frontend/src/app/shared/footer/footer.component.html
+++ b/frontend/src/app/shared/footer/footer.component.html
@@ -1,3 +1,18 @@
-<p>
-  footer works!
-</p>
+<footer class="footer" data-background-color="black">
+  <div class="container">
+    <nav>
+      <ul>
+        <li>
+          <a href="">
+            About Nexum
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <div class="copyright">
+      &copy;
+      {{data | date: 'yyyy'}}, Designed by
+      <a href="" target="_blank">Nexum</a>
+    </div>
+  </div>
+</footer>
