--- a/frontend/src/assets/sass/now-ui-kit/_inputs.scss
+++ b/frontend/src/assets/sass/now-ui-kit/_inputs.scss
@@ -3,7 +3,7 @@
 .form-control {
     background-color: white;
     border: 1px solid gray;
-    border-radius: $btn-round-radius;
+    //border-radius: $btn-round-radius;
     color: $black-color;
     line-height: normal;
     font-size: $font-size-small;
