--- a/frontend/src/app/components/CustomerProfile/broadcast/broadcast.component.html
+++ b/frontend/src/app/components/CustomerProfile/broadcast/broadcast.component.html
@@ -20,7 +20,7 @@
                     <br>
                     <div class="info info-horizontal">
                         <div class="icon icon-primary">
-                            <i class="now-ui-icons media-1_button-pause"></i>
+                            <i class="now-ui-icons media-2_sound-wave"></i>
                         </div>
                         <div>
                             <h5 class="info-title">Category</h5>
@@ -32,7 +32,7 @@
                     <br>
                     <div class="info info-horizontal">
                         <div class="icon icon-info">
-                            <i class="now-ui-icons users_single-02"></i>
+                            <i class="now-ui-icons media-2_sound-wave"></i>
                         </div>
                         <div>
                             <h5 class="info-title">Product Description</h5>
@@ -44,7 +44,7 @@
                     </div>
                     <br>
                     <div class="social-description text-center">
-                        <a class="btn btn-primary btn-round" routerLink="/userprofile/customerprofile">Back</a>
+                        <a class="btn btn-primary" routerLink="/userprofile/customerprofile">Back</a>
                     </div>
                 </div>
                 <!-- /Instructions for the user -->
@@ -61,28 +61,36 @@
                                     <div class="form-group"><label>Product</label>
                                         <input [(ngModel)]="product" formControlName="product"
                                             class="form-control border-input" placeholder="Enter the product you want"
-                                            type="text">
+                                            type="text"
+                                            [ngClass]="{'is-invalid':broadcastForm.get('product').touched && broadcastForm.get('product').invalid}">
+                                        <div class="invalid-feedback">
+                                            <div>Product is required</div>
+                                        </div>
                                     </div>
+
                                 </div>
                                 <div class="mt-4">
                                     <label>Select category</label>
-                                    <select class="btn btn-round btn-neutral custom-select form-control"
-                                        [(ngModel)]="category" formControlName="category">
+                                    <select class="btn btn-neutral custom-select form-control" [(ngModel)]="category"
+                                        formControlName="category"
+                                        [ngClass]="{'is-invalid':broadcastForm.get('category').touched && broadcastForm.get('category').invalid}">
                                         <option *ngFor="let item of categories">{{item}}</option>
                                     </select>
+                                    <div class="invalid-feedback">
+                                        <div>Category is required</div>
+                                    </div>
                                 </div>
 
                                 <div class="mt-3">
-                                    <div class="content"><label>Product</label>
-                                        <textarea _ngcontent-c15="" class="form-control" cols="80" rows="2"
-                                            spellcheck="false" [(ngModel)]="textMessage" formControlName="textMessage">
+                                    <div class="content"><label>Product Description</label>
+                                        <textarea class="form-control" cols="80" rows="2" spellcheck="true"
+                                            [(ngModel)]="textMessage" formControlName="textMessage">
                                         </textarea>
                                     </div>
                                 </div>
 
                                 <div class="footer text-center">
-                                    <a class="btn btn-primary btn-round btn-lg btn-block"
-                                        (click)="sendBroadcast()">Broadcast</a>
+                                    <a class="btn btn-primary btn-lg btn-block" (click)="sendBroadcast()">Broadcast</a>
                                 </div>
 
                             </form>
