--- a/frontend/src/app/components/SellerProfile/more-selling/more-selling.component.html
+++ b/frontend/src/app/components/SellerProfile/more-selling/more-selling.component.html
@@ -16,19 +16,24 @@
     <div class="container">
       <div class="row">
         <div class="col-md-2 col-sm-2">
-          <div class="card text-center" style=" width: 70rem;">
+          <div class="card" style=" width: 70rem;">
             <div class="col-md-12">
+              <div class="">
+                <div class="social-description">
+                  <a class="btn btn-primary btn-sm" routerLink="/userprofile/sellerprofile">Back</a>
+                </div>
+              </div>
               <div class="row">
               </div>
               <form>
-                <table class="table table-striped table-hover">
-                  <thead>
+                <table class="table table-striped table-hover text-center">
+                  <thead class="thead-dark">
 
                     <tr>
                       <th scope="col">Number</th>
                       <th scope="col" sortable="name" (sort)="onSort($event)">Product</th>
                       <th scope="col" sortable="area" (sort)="onSort($event)">Message</th>
-                      <th scope="col">Finalize</th>
+                      <th scope="col">View Broadcasts</th>
                       <th scope="col">Remove</th>
                     </tr>
                   </thead>
@@ -41,8 +46,8 @@
                       <td scope="row">{{x.tags}}</td>
                       <td scope="row">
                         <div class="social-description">
-                          <a href="#button" class="btn btn-primary btn-sm  btn-sm"><i
-                              class="now-ui-icons ui-1_simple-remove"></i></a>
+                          <a class="btn btn-primary btn-sm  btn-sm" routerLink="/userprofile/sellingitem/{{x._id}}"><i
+                              class=" now-ui-icons location_world"></i></a>
                         </div>
                       </td>
                       <td>
