--- a/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
@@ -24,10 +24,10 @@
         </div>
         <div class="row justify-content-center">
           <div class="social-description">
-            <a class="btn btn-primary btn-lg btn-round" routerLink="/userprofile/selling">Selling</a>
-          </div>
+            <a class="btn btn-primary btn-lg" routerLink="/userprofile/selling">Selling</a>
+          </div>&nbsp;
           <div class="social-description">
-            <a href="#button" class="btn btn-primary btn-lg btn-round">Sales History</a>
+            <a href="#button" class="btn btn-primary btn-lg">Sales History</a>
           </div>
         </div>
       </div>
@@ -291,7 +291,7 @@
       <div class="row">
         <div class=" col-md-12 col-sm-12">
           <div class="mt-4">
-            <h3>Recent Broadcasts Received</h3>
+            <h3>My Selling</h3>
           </div>
 
           <div class="mt-5">
@@ -314,13 +314,13 @@
                             </div>
                             <form>
                               <table class="table table-striped table-hover">
-                                <thead>
+                                <thead class="thead-dark">
 
                                   <tr>
                                     <th scope="col">Number</th>
                                     <th scope="col" sortable="name" (sort)="onSort($event)">Product</th>
                                     <th scope="col" sortable="area" (sort)="onSort($event)">Message</th>
-                                    <th scope="col">Finalize</th>
+                                    <th scope="col">View Broadcasts</th>
                                     <th scope="col">Remove</th>
                                   </tr>
                                 </thead>
@@ -333,8 +333,9 @@
                                     <td scope="row">{{x.tags}}</td>
                                     <td scope="row">
                                       <div class="social-description">
-                                        <a href="#button" class="btn btn-primary btn-sm  btn-sm"><i
-                                            class="now-ui-icons ui-1_simple-remove"></i></a>
+                                        <a class="btn btn-primary btn-sm  btn-sm"
+                                          routerLink="/userprofile/sellingitem/{{x._id}}"><i
+                                            class="now-ui-icons location_world"></i></a>
                                       </div>
                                     </td>
                                     <td>
