--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -24,7 +24,7 @@
                         <input class="form-control mr-sm-2 no-border" [(ngModel)]="search" formControlName="search"
                             placeholder="Search" type="text">
                     </div>
-                    <button class="btn btn-primary btn-just-icon btn-round" type="submit" (click)="searchUser()">
+                    <button class="btn btn-primary btn-just-icon" type="submit" (click)="searchUser()">
                         <i class="now-ui-icons ui-1_zoom-bold"></i></button>
                 </form>
                 <!-- Search. -->
@@ -33,13 +33,13 @@
 
                 <div class="col">
 
-                    <button *ngIf="[(currentUser)]=='customer'" class="btn btn-primary btn-round" type="button"
+                    <button *ngIf="[(currentUser)]=='customer'" class="btn btn-primary " type="button"
                         routerLink="/userprofile/sellerprofile" (click)="changeUser()">Switch to Seller</button>
-                    <button *ngIf="[(currentUser)]=='seller'" class="btn btn-primary btn-round" type="button"
+                    <button *ngIf="[(currentUser)]=='seller'" class="btn btn-primary" type="button"
                         routerLink="/userprofile/customerprofile" (click)="changeUser()">Switch to Customer</button>
 
                     <div ngbDropdown class="d-inline-block">
-                        <button class="btn btn-primary btn-round" id="dropdownBasic1" type="button" ngbDropdownToggle>
+                        <button class="btn btn-primary" id="dropdownBasic1" type="button" ngbDropdownToggle>
                             <i class="now-ui-icons users_single-02"></i> Profile
                         </button>
                         <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
