--- a/frontend/src/app/components/FinalizingComponent/finalizingform/finalizingform.component.scss
+++ b/frontend/src/app/components/FinalizingComponent/finalizingform/finalizingform.component.scss
@@ -13,3 +13,18 @@ label {
 h5 {
     color: black;
 }
+
+.card-details {
+    height: 240px
+}
+
+.emoticons_satisfied {
+    font-size: 50px !important;
+    margin-left: auto !important;
+    margin-right: auto !important;
+    margin-top: 20% !important;
+}
+
+tr {
+    height: 40px;
+}
