solving conflicts in admin profile

--- a/frontend/src/app/pages/userprofile/adminprofile/adminprofile.component.html
+++ b/frontend/src/app/pages/userprofile/adminprofile/adminprofile.component.html
@@ -50,9 +50,9 @@
                   {{item.seller}}
                 </p>
                 <a class="btn btn-danger" (click)="deleteComplain(item._id)">Delete User</a>
-                <!-- <a class="btn btn-warning" (click)="sendEmail(item.seller);updateCompalin(item._id)">Send Warning</a> -->
-                <a *ngIf="item.warningSent==false" class="btn btn-warning" (click)="updateCompalin(item._id)">Send Warning</a>
-                <button *ngIf="item.warningSent==true" type="button" class="btn btn-light" disabled>Warning Sent!</button>
+                <a *ngIf="item.warningSent==false" class="btn btn-warning" (click)="sendEmail(item.seller);updateCompalin(item._id)" routerLink="/reload">Send Warning</a>
+                <!-- <a *ngIf="item.warningSent==false" class="btn btn-warning" (click)="updateCompalin(item._id)">Send Warning</a> -->
+                <a *ngIf="item.warningSent==true" type="button" class="btn btn-light" disabled>Warning Sent!</a>
                 <a href="" class="btn btn-primary">Delete Complain</a>
               </div>
             </div>
