--- a/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.scss
+++ b/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.scss
@@ -1,6 +1,6 @@
 h3 {
     color: rgb(141, 23, 23);
-  color: white;
+  color: rgb(153, 10, 10);
 
 }
 h5{
@@ -116,3 +116,9 @@ h5{
 tr {
   height: 40px;
 }}
+.avatar {
+   
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
+}
