add rate and review

--- a/frontend/src/app/components/FinalizingComponent/acceptfinalizing/acceptfinalizing.component.scss
+++ b/frontend/src/app/components/FinalizingComponent/acceptfinalizing/acceptfinalizing.component.scss
@@ -2,3 +2,21 @@ h3,
 h5 {
     color: black;
 }
+
+.table {
+    color: black !important
+}
+
+h5,
+h4,
+p,
+th {
+    color: black !important;
+}
+
+.page-header {
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100%;
+}
