--- a/frontend/src/app/components/FinalizingComponent/finalizingform/finalizingform.component.html
+++ b/frontend/src/app/components/FinalizingComponent/finalizingform/finalizingform.component.html
@@ -2,59 +2,15 @@
 
 <div class="wrapper">
   <div class="page-header" style="background-image: url('assets/img/bg5.jpg');">
-    <div class="row">
-      <div class="mt-5"></div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="mt-5"></div>
+      </div>
     </div>
+
     <div class="container">
       <div class="mt-5">
-        <div class="row">
-          <div class="col-md-2">
-            <div class="card bg-dark text-white card-details text-center a">
-              <i class=" now-ui-icons emoticons_satisfied"></i>
-            </div>
-          </div>
-          <div class="col-md-10">
-            <div class="card bg-dark text-white card-details">
-              <div class=" container">
-                <div class="row">
-                  <div class=" col-md-12 col-sm-12">
-                    <table class="table">
-                      <thead>
-                        <tr>
-                          <th scope="col" colspan="2" class="">Product Details</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <th scope="row">Product Name</th>
-                          <td>{{itemDetails?.item[0].product}}</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Product Id</th>
-                          <td>{{itemDetails?.item[0]._id}}</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Product Category</th>
-                          <td>{{itemDetails?.item[0].category}}</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Product Tags</th>
-                          <td>{{itemDetails?.item[0].tags}}</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">User Id</th>
-                          <td>{{custId}}</td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
-
 
       <div class="row">
         <!-- Finalizing form -->
@@ -62,25 +18,104 @@
           <div class="card">
             <div class="mt-2">
               <h3 class="card-title">Finalizing Form</h3>
+
             </div>
             <div class="card-body">
+
+              <div class="row">
+                <div class="col-md-4">
+                  <h4 class="title">{{sellerName}}</h4>
+                  <p class="category">{{sellerId}}</p>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-md-4">
+                  <h4 class="title">{{custName?.username}}</h4>
+                  <p class="category">{{custId}}</p>
+                </div>
+                <div class="col-md-8 ml-auto">
+                  <h4 class="title">&nbsp;</h4>
+                  <p class="category">{{today | date}}</p>
+                </div>
+              </div>
+
+              <div class="row mt-4">
+                <div class="col-md-12">
+                  <table class="table border">
+                    <thead>
+                      <tr>
+                        <th scope="col" colspan="2" class="">Product Details</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th class="category">Product Name</th>
+                        <td>{{itemDetails?.item[0].product}}</td>
+                      </tr>
+                      <tr>
+                        <th class="category">Product Id</th>
+                        <td>{{itemDetails?.item[0]._id}}</td>
+                      </tr>
+                      <tr>
+                        <th class="category">Product Category</th>
+                        <td>{{itemDetails?.item[0].category}}</td>
+                      </tr>
+                      <tr>
+                        <th class="category">Product Tags</th>
+                        <td>{{itemDetails?.item[0].tags}}</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+
+
               <form class="form-group" [formGroup]="finalizingForm">
-                <div class="mt-2">
-                  <div class="form-group"><label>Price</label>
-                    <input [(ngModel)]="price" formControlName="price" class="form-control border-input"
-                      placeholder="Enter the price" type="number">
+                <hr>
+                <div class="mt-3">
+                  <div class="row">
+                    <div class="col-md-4">
+                      <div class="form-group"><label>Unit Price</label>
+                        <input [(ngModel)]="price" formControlName="price" class="form-control border-input"
+                          placeholder="Enter the price" type="number">
+                      </div>
+                    </div>
+                    <div class="col-md-4">
+                      <div class="form-group"><label>Quantity</label>
+                        <input [(ngModel)]="quantity" formControlName="quantity" class="form-control border-input"
+                          placeholder="Quantity" type="number">
+                      </div>
+                    </div>
+                    <div class="col-md-4">
+                      <div class="form-group"><label>Tax %</label>
+                        <input [(ngModel)]="tax" formControlName="tax" class="form-control border-input"
+                          placeholder="Tax in %" type="number">
+                      </div>
+                    </div>
                   </div>
                 </div>
+
+
+                <div class="mt-1">
+                  <div class="row">
+                    <div class="col-md-12">
+                      <h4 class="category">Total Amount : {{price * quantity + price * quantity * (tax/100)}}</h4>
+                    </div>
+                  </div>
+                </div>
+
+
                 <div class="mt-3">
-                  <div class="content"><label>Message</label>
-                    <textarea _ngcontent-c15="" class="form-control" cols="80" rows="2" spellcheck="false"
-                      [(ngModel)]="textMessage" formControlName="textMessage">
+                  <div class="content"><label>Message for the Customer</label>
+                    <textarea class="form-control" cols="80" rows="2" spellcheck="false" [(ngModel)]="textMessage"
+                      formControlName="textMessage">
                         </textarea>
                   </div>
                 </div>
 
                 <div class="footer text-center">
-                  <a class="btn btn-primary btn-round btn-lg btn-block" (click)="sendFinalizingForm()">Send</a>
+                  <a class="btn btn-primary btn-lg btn-block" (click)="sendFinalizingForm()">Send</a>
                 </div>
 
               </form>
