--- a/frontend/src/app/pages/sellerview/sellerview.component.html
+++ b/frontend/src/app/pages/sellerview/sellerview.component.html
@@ -31,22 +31,31 @@
       </div>
     </div>
   </div>
+
   <div class="mt-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-3 col-sm-2">
-          <div class="card text-center" style=" width: 70rem;">
-            <h3>Ratings</h3>
-            <div class="col-md-12">
+        <div class="col-md-5">
+          <div class="card bg-dark card-details text-white">
+            <app-ratingview></app-ratingview>
+          </div>
+        </div>
+        <div class="col-md-7">
+          <div class="card bg-dark text-white card-details">
+            <div class=" container">
               <div class="row">
+                <div class=" col-md-12 col-sm-12">
+                  ABC
+                </div>
               </div>
-
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+
+
 
   <div class="subscribe-line subscribe-line-transparent" style="background-image: url('assets/img/banner.jpg')">
     <div class="text-center container">
